--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_HOST=localhost
+DB_HOST=34.128.89.181
 DB_USERNAME=root
-DB_PASS=
+DB_PASS=Ari-Anto05
 DB_NAME=koling
 SEKRET_KEY=hgkHFJC_38DFIEC5NajajgarJF
